# make_string

./: CMakeLists.txt  make_string.c  readme.md
cmake/: dependencies.cmake
include/: make_string.h  make_string.hpp
source/: make_string.c
tests/: basic.cpp  nesting.cpp  re_use.cpp
